--- a/src/assets/css/scss.scss
+++ b/src/assets/css/scss.scss
@@ -7,3 +7,4 @@ $rem:1rem;
 $background:#f6f6f6;
 $color:#494949;
 $fontSize6:.6rem;
+$searchColor:(rgb(35, 132, 232)) (rgb(122, 106, 219)) (rgb(159, 120, 96)) (rgb(230, 70, 126)) (rgb(42, 184, 204)) (rgb(42, 184, 204)) (rgb(244, 143, 46)) (rgb(159, 120, 96)) (rgb(87, 116, 197)) (rgb(89, 108, 221)) (rgb(64, 207, 169)) (rgb(66, 189, 86))
